# secure_auth_rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  auth.db  test_security.sh
docs/: security.typ  test.typ
migrations/: 20251110214547_initial_schema.down.sql  20251110214547_initial_schema.up.sql  20251111210710_initial_schema.up.sql  20251113083746_initial_scema.down.sql  20251113083746_initial_scema.up.sql
non-funcitonal-test/: test.typ
scripts/: generate_certs.sh  test_admin_api.sh  test_security.sh  test_tls_security.sh
src/: db.rs  main.rs
src/crypto/: account.rs  cpr.rs  mod.rs  totp.rs
src/db/: mod.rs  models.rs  repository.rs
src/middleware/: auth.rs  cpr.rs  mod.rs  rate_limit.rs
src/routes/: auth.rs  tests.rs
src/tls/: mod.rs
static/: admin.html  auth.html  fingerprint.js  index.html  login.html  signup.html  styles.css
