[package]
name = "secure_auth_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
axum = "0.8.6"
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.10.0-rc.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower_governor = "0.8.0"
zeroize = { version = "1.8.2", features = ["derive"] }
