[package]
name = "secure_auth_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.8.6"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rand = "0.10.0-rc.5"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
totp-rs = { version = "5.7.0", features = ["otpauth", "qr"] }
tower-http = { version = "0.6.6", features = ["fs"] }
base64 = "0.22.1"
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["derive"] }
